spacing fix

--- a/static/global.css
+++ b/static/global.css
@@ -71,6 +71,9 @@ header, article, aside, main > div {
   /*padding-bottom: 1rem;*/
   background-blend-mode: soft-light, screen;
 }
+/*article > div:last-child {
+  margin-bottom: var(--gap);
+}*/
 header + div > article:first-child {
   padding-top: 2rem;
 }
@@ -96,10 +99,6 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0;
   text-shadow: 0 0 0.75em var(--dark-blue);
 }
-article h1:first-child, article h2:first-child, article h3:first-child, article h4:first-child, article h5:first-child, article h6:first-child, aside h1:first-child, aside h2:first-child, aside h3:first-child, aside h4:first-child, aside h5:first-child, aside h6:first-child {
-  padding-top: 1.5em;
-  margin-top: 0;
-}
 figure p {
   margin-top: 0;
 }
@@ -117,10 +116,13 @@ h1 a {
   text-decoration: none;
 }
 /*main header {
-  padding: var(--gap4) var(--sides) var(--gap);
+  padding: var(--gap4) var(--sides);
 }*/
-article, aside {
+aside {
   padding: 0 var(--sides) 1rem;
+}
+article {
+  padding: var(--gap) var(--sides);
 }
 article > div, aside > div, figcaption {
   max-width: 56ch;
@@ -251,6 +253,10 @@ button img {
   }
 }
 
+article h1:first-child, article h2:first-child, article h3:first-child, article h4:first-child, article h5:first-child, article h6:first-child, aside h1:first-child, aside h2:first-child, aside h3:first-child, aside h4:first-child, aside h5:first-child, aside h6:first-child {
+  padding-top: 1.5em;
+  margin-top: 0;
+}
 
 article p, article ul, article ol, article dl, article table, footer + aside p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
